# cpptemplate

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
